--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- Stampa dell'output all'interno -->
+    <div class="container">
+
+    </div>
     
     <script src="./js/script.js" type="text/javascript"></script>
 </body>
